differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr43082.c-5.4.0-3.out.txt
pr43082.c: In function ‘foo’:
pr43082.c:7:7: error: void value not ignored as it ought to be
   if (x ? (void)(0) : (void)(1))  
       ^
